Create mvc for tools and launch profile (wip)