@@ -1,10 +1,9 @@
 package uk.co.bigsoft.filesucker.looper.number;
 
 public class NumberLooperParms {
+
 	private Integer from;
-
 	private Integer to;
-
 	private Integer pad;
 
 	NumberLooperParms(String x) {
@@ -12,9 +11,9 @@ public class NumberLooperParms {
 		if (t.length < 3)
 			return;
 
-		from = new Integer(t[0]);
-		to = new Integer(t[1]);
-		pad = new Integer(t[2]);
+		from = Integer.valueOf(t[0]);
+		to = Integer.valueOf(t[1]);
+		pad = Integer.valueOf(t[2]);
 	}
 
 	public Integer getFrom() {
